--- a/src/styles/blobButton.scss
+++ b/src/styles/blobButton.scss
@@ -5,7 +5,7 @@
     font-family: degular, sans-serif;
     position: relative;
     color: $blue;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     background-color: transparent;
     outline: none;
@@ -13,21 +13,25 @@
     transition: color 0.5s;
     cursor: pointer;
     padding: 13px;
-    width: 240px;
-    margin: 24px;
-    @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-      width: calc(240px + (400 - 240) * ((100vw - 380px) / (768 - 351)));
-      font-size: calc(16px + (18 - 16) * ((100vw - 380px) / (768 - 351)));
+    margin: 3%;
+    width: 120px;
+    @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+      width: calc(120px + (200 - 120) * ((100vw - 200px) / (350 - 200)));
+      font-size: calc(12px + (16 - 12) * ((100vw - 200px) / (350 - 200)));
+    }
+    @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt){
+      width: calc(200px + (300 - 200) * ((100vw - 350px) / (768 - 350)));
+      font-size: 16px;
     }
     @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+      width: calc(300px + (600 - 300) * ((100vw - 768px) / (1440 - 768)));
+      font-size: calc(16px + (24 - 16) * ((100vw - 768px) / (1440 - 768)));
       padding: 20px;
-      width: calc(400px + (600 - 400) * ((100vw - 768px) / (1440 - 768)));
-      font-size: calc(18px + (34 - 18) * ((100vw - 768px) / (1440 - 768)));
     }
     @media screen and (min-width: $break--dsktp--lg){
-      padding: 40px;
       width: calc(600px + (800 - 600) * ((100vw - 1440px) / (2000 - 1440)));
-      font-size: calc(34px + (42 - 34) * ((100vw - 1440px) / (2000 - 1440)));
+      font-size: calc(24px + (32 - 24) * ((100vw - 1440px) / (2000 - 1440)));
+      padding: 20px;
     }
     
     &:before {
@@ -39,11 +43,8 @@
       height: 100%;
       border-radius:70px;
       border: 5px solid $blue;
-      @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+      @media screen and (min-width: $break--tblt) {
         border: 6px solid $blue;
-      }
-      @media screen and (min-width: $break--dsktp--lg){
-        border: 10px solid $blue;
       }
     }
     
