--- a/src/styles/eyes.scss
+++ b/src/styles/eyes.scss
@@ -11,20 +11,25 @@
     border-radius: 50%;
     overflow: hidden;
     position: relative;
-    @media screen and (min-width: 351px) and (max-width: $break--tblt) {
+    @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
       border: 3px solid $blue;
-      height: calc(30px + (50 - 30) * ((100vw - 351px) / (768 - 351)));
-      width: calc(30px + (50 - 30) * ((100vw - 351px) / (768 - 351)));
+      height: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
+      width: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
+    }
+    @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt){
+      border: 5px solid $blue;
+      height: calc(40px + (60 - 40) * ((100vw - 350px) / (768 - 350)));
+      width: calc(40px + (60 - 40) * ((100vw - 350px) / (768 - 350)));
     }
     @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-      border: 5px solid $blue;
-      height: calc(50px + (100 - 50) * ((100vw - 768px) / (1440 - 768)));
-      width: calc(50px + (100 - 50) * ((100vw - 768px) / (1440 - 768)));
+      border: 7px solid $blue;
+      height: calc(60px + (100 - 60) * ((100vw - 768px) / (1440 - 768)));
+      width: calc(60px + (100 - 60) * ((100vw - 768px) / (1440 - 768)));
     }
-    @media screen and (min-width: $break--dsktp--lg) {
-      border: 8px solid $blue;
-      height: calc(100px + (160 - 100) * ((100vw - 1440px) / (2000 - 1440)));
-      width: calc(100px + (160 - 100) * ((100vw - 1440px) / (2000 - 1440)));
+    @media screen and (min-width: $break--dsktp--lg){
+      border: 9px solid $blue;
+      height: calc(100px + (150 - 100) * ((100vw - 1440px) / (2000 - 1440)));
+      width: calc(100px + (150 - 100) * ((100vw - 1440px) / (2000 - 1440)));
     }
 
     .pupil {
