--- a/src/styles/randomIcons.scss
+++ b/src/styles/randomIcons.scss
@@ -2,7 +2,8 @@
 
 
 .box {
-    transition: left 0.5s ease, top 0.5s ease;
+    // transition: left 0.5s ease, top 0.5s ease;
+    transition: width 0.5s ease, height 0.5s ease;
     width: 20px;
     height: 20px;
     @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
