--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -54,6 +54,14 @@
     to { background-position-x: -90000px; }
   }
 
+// --------------------------------- BUTTONS --------------------------------- //
+
+
+button {
+    cursor: pointer;
+    border: 0;
+    background: white;
+}
 // -------------------------------------- FLEX -------------------------------------- //
 
 .flex {
