made everyoness feedback updates

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -196,7 +196,15 @@ button {
     &--20 {
         width: 20px;
     }
+    &--40 {
+        &--md {
+            @media screen and (min-width: $break--tblt) {
+                width: 40px;
+            }
+        }
+    }
 }
+
 
 // ------------------------------------- POSITION ------------------------------------- //
 
