--- a/src/styles/randomIcons.scss
+++ b/src/styles/randomIcons.scss
@@ -2,10 +2,11 @@
 
 
 .box {
-    // transition: left 0.5s ease, top 0.5s ease;
-    transition: width 0.5s ease, height 0.5s ease;
+    transition: width 0.1s ease, height 0.1s ease;
     width: 20px;
     height: 20px;
+    display: inline-block; /*Makes the icons inline block level elements. This will let us animate the transform property.*/ 
+    animation: float 5s ease-in-out infinite; /*Applies the float keyframe animation over 5s and makes it run infinitely.*/
     @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
       height: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
       width: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
@@ -28,6 +29,7 @@
   .ag-icon_item:first-child {
     bottom: 10%;
     left: 10%;
+    animation-delay: 2s;
   }
   .ag-icon_item:nth-child(2) {
     bottom: 60%;
@@ -36,19 +38,13 @@
   .ag-icon_item:nth-child(3) {
     bottom: 30%;
     right: 30%;
+    animation-delay: 1s;
   }
   .ag-icon_item:last-child {
     bottom: 60%;
     right: 5%;
+    animation-delay: 3s;
   }
-  
-.floating-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-}
 
 img {
   width: 100%;
@@ -56,3 +52,14 @@ img {
 }
 
 
+@keyframes float {
+  0%{
+      transform: translateY(0); /*The starting point of the animation is 0.*/
+  }
+  50%{
+      transform: translateY(-15px); /*The middle point of the animation is -15xp. This will move the element up.*/
+  }
+  100%{
+      transform: translateY(0); /*The last point of the animation is going back to the starting state of 0.*/
+  }
+}
