--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -184,6 +184,11 @@ button {
             margin-top: 30px;
         }
     }
+    &-bottom {
+        &--30 {
+            margin-bottom: 30px;
+        }
+    }
     &--3per {
         margin: 3%;
     }
