--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -13,7 +13,7 @@
     right: 0;
     bottom: 0;
     border: 10px solid $blue;
-    margin: 20px;
+    margin: 10px;
     z-index: 9999;
     color: $blue;
     text-align: center;
@@ -171,11 +171,19 @@ button {
             padding-bottom: 30px;
         }
     }
+    &-top {
+        &--20 {
+            padding-top: 20px;
+        }
+    }
 
 
 }
 
 .margin {
+    &--auto {
+        margin: 0 auto;
+    }
     &-top {
         &---5 {
             margin-top: -5px;
@@ -189,9 +197,6 @@ button {
             margin-bottom: 30px;
         }
     }
-    &--3per {
-        margin: 3%;
-    }
 }
 
 .min-width {
@@ -199,6 +204,13 @@ button {
         min-width: 200px;
     }
 }
+
+.max-width {
+    &--340 {
+        max-width: 340px;
+    }
+}
+
 
 .width {
     &--20 {
