--- a/src/styles/blobButton.scss
+++ b/src/styles/blobButton.scss
@@ -13,26 +13,27 @@
     transition: color 0.5s;
     cursor: pointer;
     padding: 13px;
-    margin: 3%;
+    margin: 20px;
     width: 120px;
     @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
       width: calc(120px + (200 - 120) * ((100vw - 200px) / (350 - 200)));
       font-size: calc(12px + (16 - 12) * ((100vw - 200px) / (350 - 200)));
     }
-    @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt){
-      width: calc(200px + (300 - 200) * ((100vw - 350px) / (768 - 350)));
+    @media screen and (min-width: $break--mbl--sm){
+      width: 200px;
       font-size: 16px;
     }
-    @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-      width: calc(300px + (600 - 300) * ((100vw - 768px) / (1440 - 768)));
-      font-size: calc(16px + (24 - 16) * ((100vw - 768px) / (1440 - 768)));
-      padding: 20px;
-    }
-    @media screen and (min-width: $break--dsktp--lg){
-      width: calc(600px + (800 - 600) * ((100vw - 1440px) / (2000 - 1440)));
-      font-size: calc(24px + (32 - 24) * ((100vw - 1440px) / (2000 - 1440)));
-      padding: 20px;
-    }
+
+    // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+    //   width: calc(300px + (600 - 300) * ((100vw - 768px) / (1440 - 768)));
+    //   font-size: calc(16px + (24 - 16) * ((100vw - 768px) / (1440 - 768)));
+    //   padding: 20px;
+    // }
+    // @media screen and (min-width: $break--dsktp--lg){
+    //   width: calc(600px + (800 - 600) * ((100vw - 1440px) / (2000 - 1440)));
+    //   font-size: calc(24px + (32 - 24) * ((100vw - 1440px) / (2000 - 1440)));
+    //   padding: 20px;
+    // }
     
     &:before {
       content: "";
