--- a/src/styles/blobButton.scss
+++ b/src/styles/blobButton.scss
@@ -13,13 +13,16 @@
     transition: color 0.5s;
     cursor: pointer;
     padding: 13px;
-    margin: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     width: 120px;
     @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+      margin-bottom: 20px;
       width: calc(120px + (200 - 120) * ((100vw - 200px) / (350 - 200)));
       font-size: calc(12px + (16 - 12) * ((100vw - 200px) / (350 - 200)));
     }
     @media screen and (min-width: $break--mbl--sm){
+      margin-bottom: 20px;
       width: 200px;
       font-size: 16px;
     }
