--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -14,70 +14,26 @@
       }
     }
 
-    // .hor {
-    //   padding: 5px;
-    //   @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt) {
-    //     padding: calc(5px + (20 - 5) * ((100vw - 350px) / (768 - 350)));
-    //     font-size: calc(18px + (40 - 18) * ((100vw - 350px) / (768 - 350)));
-    //   }
-    //   @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-    //     padding: 20px;
-    //     font-size: calc(40px + (90 - 40) * ((100vw - 768px) / (1440 - 768)));
-    //   }
-    //   @media screen and (min-width: $break--dsktp--lg){
-    //       padding: 20px;
-    //       font-size: calc(90px + (125 - 90) * ((100vw - 1440px) / (2000 - 1440)));
-    //   }
-    // }
-
-    .vert {
-      padding: 5px;
-      @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-        padding: calc(5px + (20 - 5) * ((100vw - 200px) / (768 - 200)));
-        font-size: calc(18px + (90 - 18) * ((100vw - 200px) / (768 - 200)));
-      }
-      @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        padding: 20px;
-        font-size: calc(46px + (94 - 46) * ((100vw - 768px) / (1440 - 768)));
-      }
-      @media screen and (min-width: $break--dsktp--lg){
-          padding: 20px;
-          font-size: calc(94px + (135 - 94) * ((100vw - 1440px) / (2000 - 1440)));
-      }
-    }
    
       
     p {
       font-family: 'Alata-Regular', Arial, sans-serif;
-      font-size: 12px;
-      padding: 0 5px 10px;
-      @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt) {
-        padding: 0 20px 10px;
-        font-size: calc(17px + (42 - 17) * ((100vw - 350px) / (768 - 350)));
+      font-size: 10px;
+      padding-top: 6px;
+      @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+        font-size: calc(10px + (16 - 10) *  ((100vw - 200px) / (350 - 200)));
       }
-      @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-          padding: 0 20px 10px;
-          font-size: calc(42px + (77 - 42) * ((100vw - 768px) / (1440 - 768)));
+      @media screen and (min-width: $break--mbl--sm) {
+        font-size: 16px;
       }
-      @media screen and (min-width: $break--dsktp--lg){
-          padding: 0 20px 10px;
-          font-size: calc(77px + (108 - 77) * ((100vw - 1440px) / (2000 - 1440)));
-      }
-    }
-
-    .p-hor {
-      @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt) {
-        padding: 0;
-        font-size: calc(16px + (20 - 16) * ((100vw - 350px) / (768 - 350)));
-      }
-      @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        padding: 0;
-        font-size: calc(20px + (40 - 20) * ((100vw - 768px) / (1440 - 768)));
-      }
-      @media screen and (min-width: $break--dsktp--lg){
-         padding: 0;
-         font-size: calc(40px + (56 - 40) * ((100vw - 1440px) / (2000 - 1440)));
-      }
+      // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+      //     padding: 0 20px 10px;
+      //     font-size: calc(42px + (77 - 42) * ((100vw - 768px) / (1440 - 768)));
+      // }
+      // @media screen and (min-width: $break--dsktp--lg){
+      //     padding: 0 20px 10px;
+      //     font-size: calc(77px + (108 - 77) * ((100vw - 1440px) / (2000 - 1440)));
+      // }
     }
       
   
