--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -12,9 +12,16 @@
       @media screen and (min-width: $break--mbl--sm) {
         font-size: 30px;
       }
+      @media screen and (min-width: $break--tblt) {
+        font-size: calc(60px + (100 - 60) * ((100vw - 768px) / (2000 - 768)));
+      }
+      span {
+        padding-left: 10px;
+        @media screen and (min-width: $break--tblt) {
+          padding-left: 20px;
+        }
+      }
     }
-
-   
       
     p {
       font-family: 'Alata-Regular', Arial, sans-serif;
@@ -26,148 +33,10 @@
       @media screen and (min-width: $break--mbl--sm) {
         font-size: 16px;
       }
-      // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-      //     padding: 0 20px 10px;
-      //     font-size: calc(42px + (77 - 42) * ((100vw - 768px) / (1440 - 768)));
-      // }
-      // @media screen and (min-width: $break--dsktp--lg){
-      //     padding: 0 20px 10px;
-      //     font-size: calc(77px + (108 - 77) * ((100vw - 1440px) / (2000 - 1440)));
-      // }
+      @media screen and (min-width: $break--tblt) {
+        font-size: calc(30px + (48 - 30) * ((100vw - 768px) / (2000 - 768)));
+      }
     }
       
-  
-      .twinkles {
-        @media screen and (max-width: 350px) {
-          display: none;
-        }
-        @media screen and (min-width: 351px) and (max-width: $break--tblt) {
-          font-size: calc(55px + (68 - 55) * ((100vw - 350px) / (768 - 350)));
-        }
-        @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-          font-size: calc(68px + (150 - 68) * ((100vw - 768px) / (1440 - 768)));
-        }
-        @media screen and (min-width: $break--dsktp--lg){
-          font-size: calc(150px + (180 - 150) * ((100vw - 1440px) / (2000 - 1440)));
-        }
-      }
-
-      .icon-link-svg {
-        width: 20px;
-        height: 20px;
-        @media screen and (min-width: $break--min) and (max-width: 350px) {
-          width: calc(20px + (30 - 20) * ((100vw - 200px) / (350 - 200)));
-          height: calc(20px + (30 - 20) * ((100vw - 200px) / (350 - 200)));
-        }
-        @media screen and (min-width: 351px) and (max-width: $break--tblt) {
-          margin: 10px;
-          height: calc(30px + (50 - 30) * ((100vw - 351px) / (768 - 351)));
-          width: calc(30px + (50 - 30) * ((100vw - 351px) / (768 - 351)));
-        }
-        @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-          margin: 10px;
-          height: calc(50px + (120 - 50) * ((100vw - 768px) / (1440 - 768)));
-          width: calc(50px + (120 - 50) * ((100vw - 768px) / (1440 - 768)));
-        }
-        @media screen and (min-width: $break--dsktp--lg){
-          margin: 10px;
-          height: calc(120px + (160 - 120) * ((100vw - 1440px) / (2000 - 1440)));
-          width: calc(120px + (160 - 120) * ((100vw - 1440px) / (2000 - 1440)));
-        }
-      }
-
-      .icon-link {
-        display: inline-block;
-        font-size: 30px;
-        @media screen and (min-width: $break--min) and (max-width: 350px) {
-          font-size: calc(30px + (40 - 30) * ((100vw - 200px) / (350 - 200)));
-        }
-        @media screen and (min-width: 351px) and (max-width: $break--tblt) {
-          padding: 10px;
-          font-size: calc(40px + (90 - 40) * ((100vw - 351px) / (768 - 351)));
-        }
-        @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-          padding: 10px;
-          font-size: calc(90px + (160 - 90) * ((100vw - 768px) / (1440 - 768)));
-        }
-        @media screen and (min-width: $break--dsktp--lg){
-          padding: 10px;
-          font-size: calc(160px + (200 - 160) * ((100vw - 1440px) / (2000 - 1440)));
-        }
-      }
-      
-      .icon-link:hover, .icon-link-svg:hover {
-        color: $green;
-        fill: $green;
-      }
-      
-      .x1 {
-        -webkit-animation: animateBubble 4s infinite;
-        -moz-animation: animateBubble 4s infinite;
-        animation: animateBubble 4s infinite;
-      }
-      
-      .x2 {
-        -webkit-animation: animateBubble 5s ease 2s infinite alternate;
-        -moz-animation: animateBubble 5s ease 2s infinite alternate;
-        animation: animateBubble 5s ease 2s infinite alternate
-      }
-      
-      .x3 {
-        -webkit-animation: animateBubblebig 6s infinite;
-        -moz-animation: animateBubblebig 6s infinite;
-        animation: animateBubblebig 6s infinite;
-      }
-      
-      .x4 {
-        -webkit-animation: animateBubble 7s infinite;
-        -moz-animation: animateBubble 7s infinite;
-        animation: animateBubble 7s infinite;
-      }
-      
-      .x5 {
-        -webkit-animation: animateBubblebig 8s infinite;
-        -moz-animation: animateBubblebig 8s infinite;
-        animation: animateBubblebig 8s infinite;
-      }
-      
-      
-      @keyframes animateBubble {
-        0% {
-            transform: translateY(-3);
-            -webkit-transform: translateY(-3px);
-            -moz-transform: translateY(-3px)
-        }
-        50% {
-            transform: translateY(-15px);
-            -webkit-transform: translateY(-15px);
-            -moz-transform: translateY(-15px)
-        }
-        to {
-            transform: translateY(0);
-            -webkit-transform: translateY(0px);
-            -moz-transform: translateY(0px)
-        }
-      }
-      
-      @keyframes animateBubblebig {
-        0% {
-            transform: translateY(0);
-            -webkit-transform: translateY(0px);
-            -moz-transform: translateY(0px)
-        }
-      
-        50% {
-            transform: translateY(25px);
-            -webkit-transform: translateY(25px);
-            -moz-transform: translateY(25px)
-        }
-      
-        to {
-            transform: translateY(0);
-            -webkit-transform: translateY(0px);
-            -moz-transform: translateY(0px)
-        }
-      }
       
 }
