--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -11,7 +11,7 @@
             font-size: calc(24px + (38 - 24) * ((100vw - 380px) / (500 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
-            font-size: 38px;
+          font-size: calc(38px + (100 - 38) * ((100vw - 768px) / (2000 - 768)));
         }
     }
     
@@ -24,7 +24,7 @@
           font-size: calc(18px + (28 - 18) * ((100vw - 380px) / (500 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: 28px;
+          font-size: calc(28px + (48 - 28) * ((100vw - 768px) / (2000 - 768)));
         }
       }
 
@@ -37,7 +37,7 @@
           font-size: calc(12px + (18 - 12) * ((100vw - 380px) / (500 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: 18px;
+          font-size: calc(18px + (32 - 18) * ((100vw - 768px) / (2000 - 768)));
         }
       }
 
@@ -50,12 +50,17 @@
           font-size: calc(10px + (18 - 10) * ((100vw - 380px) / (500 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: 18px;
+          font-size: calc(18px + (32 - 18) * ((100vw - 768px) / (2000 - 768)));
         }
       }
 
       .close {
         width: 20px;
+        margin: 20px;
+        @media screen and (min-width: $break--tblt) {
+          width: 60px;
+          margin: 60px;
+        }
       }
 }
 
