updated portfolio text sizing

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -33,9 +33,9 @@
 // --------------------------------- HOVER ANIMATION --------------------------------- //
 
 .underline-animation:hover {
-    background-image: url('../assets/wavy.svg');
-    background-position: 0 86%;
-    background-size: auto 6px;
+    background-image: url(/img/wavy.255c39c0.svg);
+    background-position: 0 100%;
+    background-size: auto 18px;
     background-repeat: repeat-x;
     text-decoration: none;
     animation: slideleft 2000s infinite linear;
