--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -8,7 +8,7 @@
         font-weight: 400;
         font-size: 24px;
         @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-            font-size: calc(24px + (38 - 24) * ((100vw - 380px) / (500 - 380)));
+            font-size: calc(24px + (38 - 24) * ((100vw - 380px) / (768 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
           font-size: calc(38px + (100 - 38) * ((100vw - 768px) / (2000 - 768)));
@@ -19,9 +19,10 @@
         font-family: 'Alata-Regular', Arial, sans-serif;
         line-height: 1;
         padding-bottom: 5px;
+        padding-top: 5px;
         font-size: 18px;
         @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-          font-size: calc(18px + (28 - 18) * ((100vw - 380px) / (500 - 380)));
+          font-size: calc(18px + (28 - 18) * ((100vw - 380px) / (768 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
           font-size: calc(28px + (48 - 28) * ((100vw - 768px) / (2000 - 768)));
@@ -34,7 +35,7 @@
         padding-bottom: 5px;
         font-size: 12px;
         @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-          font-size: calc(12px + (18 - 12) * ((100vw - 380px) / (500 - 380)));
+          font-size: calc(12px + (18 - 12) * ((100vw - 380px) / (768 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
           font-size: calc(18px + (32 - 18) * ((100vw - 768px) / (2000 - 768)));
@@ -47,7 +48,7 @@
         font-weight: 200;
         font-size: 10px;
         @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-          font-size: calc(10px + (18 - 10) * ((100vw - 380px) / (500 - 380)));
+          font-size: calc(10px + (18 - 10) * ((100vw - 380px) / (768 - 380)));
         }
         @media screen and (min-width: $break--tblt) {
           font-size: calc(18px + (32 - 18) * ((100vw - 768px) / (2000 - 768)));
