--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -62,11 +62,7 @@ button {
         flex-direction: column;
     }
     &--row {
-        &--md {
-            @media screen and (min-width: $break--tblt) {
-                flex-direction: row;
-            }
-        }
+        flex-direction: row;
     }
 }
 
@@ -86,6 +82,9 @@ button {
     &--evenly {
         justify-content: space-evenly;
     }
+    &--between {
+        justify-content: space-between;
+    }
     &--center {
         justify-content: center;
     }
@@ -94,6 +93,9 @@ button {
 .align {
     &--center {
         align-items: center;
+    }
+    &--start {
+        align-items: start;
     }
 }
 
@@ -159,6 +161,11 @@ button {
     &-top {
         &--10 {
             padding-top: 10px;
+        }
+    }
+    &-left {
+        &--20 {
+            padding-left: 20px;
         }
     }
 
@@ -271,3 +278,19 @@ a {
 a:visited, a:-webkit-any-link {
     color: $blue;
 }
+
+.overflow {
+    &--hidden {
+        overflow: hidden;
+    }
+    &--x {
+        overflow-x: scroll;
+    }
+}
+
+/* Hide the scrollbar */
+::-webkit-scrollbar {
+    width: 0px;
+  }
+  
+  
