--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -6,12 +6,15 @@
         font-family: 'Archivo-Black', Arial, sans-serif;
         line-height: 1;
         font-weight: 400;
-        font-size: 24px;
-        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-            font-size: calc(24px + (38 - 24) * ((100vw - 380px) / (768 - 380)));
+        font-size: 18px;
+        @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+          font-size: calc(18px + (22 - 18) * ((100vw - 200px) / (350 - 200)));
+        }
+        @media screen and (min-width: $break--mbl--sm) {
+          font-size: 22px;
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: calc(38px + (100 - 38) * ((100vw - 768px) / (2000 - 768)));
+          font-size: calc(60px + (100 - 60) * ((100vw - 768px) / (2000 - 768)));
         }
     }
     
@@ -20,12 +23,15 @@
         line-height: 1;
         padding-bottom: 5px;
         padding-top: 5px;
-        font-size: 18px;
-        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-          font-size: calc(18px + (28 - 18) * ((100vw - 380px) / (768 - 380)));
+        font-size: 14px;
+        @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+          font-size: calc(14px + (18 - 14) * ((100vw - 200px) / (350 - 200)));
+        }
+        @media screen and (min-width: $break--mbl--sm) {
+          font-size: 18px;
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: calc(28px + (48 - 28) * ((100vw - 768px) / (2000 - 768)));
+          font-size: calc(36px + (60 - 36) * ((100vw - 768px) / (2000 - 768)));
         }
       }
 
@@ -34,11 +40,14 @@
         line-height: 1;
         padding-bottom: 5px;
         font-size: 12px;
-        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-          font-size: calc(12px + (18 - 12) * ((100vw - 380px) / (768 - 380)));
+        @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+          font-size: calc(12px + (16 - 12) * ((100vw - 200px) / (350 - 200)));
+        }
+        @media screen and (min-width: $break--mbl--sm) {
+          font-size: 16px;
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: calc(18px + (32 - 18) * ((100vw - 768px) / (2000 - 768)));
+          font-size: calc(26px + (42 - 26) * ((100vw - 768px) / (2000 - 768)));
         }
       }
 
@@ -46,23 +55,25 @@
         font-family: degular, sans-serif;
         font-style: italic;
         font-weight: 200;
-        font-size: 10px;
-        @media screen and (min-width: $break--mbl) and (max-width: $break--tblt) {
-          font-size: calc(10px + (18 - 10) * ((100vw - 380px) / (768 - 380)));
+        font-size: 12px;
+        @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
+          font-size: calc(12px + (16 - 12) * ((100vw - 200px) / (350 - 200)));
+        }
+        @media screen and (min-width: $break--mbl--sm) {
+          font-size: 16px;
         }
         @media screen and (min-width: $break--tblt) {
-          font-size: calc(18px + (32 - 18) * ((100vw - 768px) / (2000 - 768)));
+          font-size: calc(26px + (42 - 26) * ((100vw - 768px) / (2000 - 768)));
         }
       }
 
       .close {
         width: 20px;
-        margin: 20px;
         @media screen and (min-width: $break--tblt) {
           width: 60px;
-          margin: 60px;
         }
       }
+
 }
 
 
