--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -163,6 +163,11 @@ button {
             padding-top: 10px;
         }
     }
+    &-top {
+        &--12 {
+            padding-top: 12px;
+        }
+    }
     &-left {
         &--20 {
             padding-left: 20px;
@@ -173,11 +178,16 @@ button {
 }
 
 .margin {
+    &--auto {
+        margin: 0 auto;
+    }
     &--30 {
         margin: 30px;
     }
-    &--auto {
-        margin: 0 auto;
+    &-right {
+        &---20 {
+            margin-right: -20px;
+        }
     }
     &-top {
         &---5 {
