--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -33,7 +33,7 @@
 // --------------------------------- HOVER ANIMATION --------------------------------- //
 
 .underline-animation:hover {
-    background-image: url(/img/wavy.255c39c0.svg);
+    background-image: url('../assets/wavy.svg');
     background-position: 0 100%;
     background-size: auto 18px;
     background-repeat: repeat-x;
