fixed pupil ease

--- a/src/styles/eyes.scss
+++ b/src/styles/eyes.scss
@@ -46,7 +46,7 @@
     transition: left 0.3s ease, top 0.3s ease;
     border-radius: 50%;
     @media screen and (min-width: $break--tblt) {
-      transition: unset;
+      transition: left 0.1s ease, top 0.1s ease;
       height: calc(23px + (40 - 23) * ((100vw - 768px) / (2000 - 768)));
       width: calc(23px + (40 - 23) * ((100vw - 768px) / (2000 - 768)));
     }
