--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -16,8 +16,19 @@
         @media screen and (min-width: $break--tblt) {
           font-size: calc(60px + (100 - 60) * ((100vw - 768px) / (2000 - 768)));
         }
-    }
-    
+        .underline-animation:hover {
+          background-image: url('../assets/wavy.svg');
+          background-position: 0 100%;
+          background-repeat: repeat-x;
+          text-decoration: none;
+          animation: slideleft 1500s infinite linear;
+          background-size: auto 8px;
+          @media screen and (min-width: $break--tblt) {
+            animation: slideleft 500s infinite linear;
+            background-size: auto 40px;
+          }
+        }
+    }    
     h3 {
         font-family: 'Alata-Regular', Arial, sans-serif;
         line-height: 1;
@@ -65,6 +76,18 @@
         @media screen and (min-width: $break--tblt) {
           font-size: calc(26px + (42 - 26) * ((100vw - 768px) / (2000 - 768)));
         }
+        .mini-underline-animation:hover {
+          background-image: url('../assets/wavy.svg');
+          background-position: 0 100%;
+          background-repeat: repeat-x;
+          text-decoration: none;
+          background-size: auto 4px;
+          animation: slideleft 1500s infinite linear;
+          @media screen and (min-width: $break--tblt) {
+            background-size: auto 15px;
+            animation: slideleft 1500s infinite linear;
+          }
+        }
       }
 
       .close {
@@ -72,6 +95,11 @@
         @media screen and (min-width: $break--tblt) {
           width: 60px;
         }
+      }
+
+      @keyframes slideleft {
+        from { background-position-x: -200px; }
+        to { background-position-x: -90000px; }
       }
 
 }
