--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -7,6 +7,7 @@
     padding: 0;
   }
 
+
   .main-border {
     top: 0;
     left: 0;
@@ -18,6 +19,7 @@
     text-align: center;
     min-width: 160px;
     border: 5px solid $blue;
+    cursor: none;
     @media screen and (min-width: $break--tblt) {
       border: 6px solid $blue;
     }
@@ -28,6 +30,36 @@
   width: 100%;
   height: 100%;
 }
+
+// --------------------------------- CURSOR --------------------------------- //
+
+.cursor {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: $blue;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    transition: width 0.25s, height 0.25s;
+  }
+
+  .cursor.is-down {
+    width: 80px;
+    height: 80px;
+  }
+
+  // --------------------------------- CANVAS --------------------------------- //
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: lighten;
+  }
 
 // --------------------------------- BUTTONS --------------------------------- //
 
